<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<android.support.v7.widget.Toolbar-->
    <!--android:id="@+id/tool_bar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="?actionBarSize"-->
    <!--android:background="?attr/colorPrimary">-->

    <RelativeLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <ImageView
            android:id="@+id/item_image_back"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/movie_details"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>
    <!--</android.support.v7.widget.Toolbar>-->

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@id/rl_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fitsSystemWindows="true"
        android:src="@drawable/movie1_image"
        android:transitionName="image" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_image"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/movie_name"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/colen"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:text="@string/dummy_title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:transitionName="title" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/release_year"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/colen"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/dummy_title"
                    android:textSize="16sp"
                    android:transitionName="year" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_year"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/director"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/colen"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_director"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:text="@string/dummy_title"
                    android:textSize="16sp"
                    android:transitionName="director" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_music_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_director"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/music_by"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/colen"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item__music_director"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:text="@string/dummy_title"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_starcast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_music_director"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/starring"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/colen"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_starcast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:text="@string/dummy_title"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>